k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-https-redirect
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
