k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfm-ai
  namespace: tfm-ai-front
  labels:
    app: tfm-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfm-ai
  template:
    metadata:
      labels:
        app: tfm-ai
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: tfm-ai
          image: ghcr.io/bruno-practicas/tfm-ai:Bruno-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
