k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfm-ai
spec:
  selector:
    app: tfm-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
