k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfm-ai
  namespace: tfm-ai-front
spec:
  selector:
    app: tfm-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
