k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: helmcode
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - bruno.helmcode.com
    secretName: frontend-tls
  rules:
  - host: bruno.helmcode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tfm-ai
            port:
              number: 80
