k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tfm-ai-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bruno.helmcode.com`)
      kind: Rule
      services:
        - name: tfm-ai
          port: 80
      middlewares:
        - name: frontend-https-redirect

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tfm-ai-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bruno.helmcode.com`)
      kind: Rule
      services:
        - name: tfm-ai
          port: 80
  tls:
    certResolver: letsencrypt
